fixes alignment of social links

--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -40,6 +40,10 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+
+  &.flex-start {
+    justify-content: flex-start;
+  }
   a {
     display: flex;
     flex-direction: column;
